--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
         </section>
     </main>
     <footer class="container footer">
-        <div class="div-foot">
-             <a href="./index.html" class="link logo">Web<span class="foot-logo-part">Studio</span></a>
+        <div class="div-foot container">
+             <a href="./index.html" class="link logo foot">Web<span class="foot-logo-part">Studio</span></a>
              <p class="footer-text text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
     </footer>
