--- a/portfolio.html
+++ b/portfolio.html
@@ -47,8 +47,6 @@
             <li class="filter-list-item"><button type="button" class="filter-item-btn">Design</button></li>
             <li class="filter-list-item"><button type="button" class="filter-item-btn">Marketing</button></li>
              </ul>
-          </div>
-        <div class="container div-card">
                <ul class="filter-card-list list">
             <li class="card-item">
                 <a href="" class="card-item-link link">
@@ -137,7 +135,7 @@
   </main>
 <footer class="container footer">
     <div class="div-foot">
-        <a href="./index.html" class="link logo">Web<span class="foot-logo-part">Studio</span></a>
+        <a href="./index.html" class="link logo foot">Web<span class="foot-logo-part">Studio</span></a>
         <p class="footer-text text">Increase the flow of customers and sales for your business with digital marketing &
             growth solutions.</p>
     </div>
