--- a/portfolio.html
+++ b/portfolio.html
@@ -133,8 +133,8 @@
         </div>
         </section>
   </main>
-<footer class="container footer">
-    <div class="div-foot">
+<footer class="footer">
+    <div class="container div-foot">
         <a href="./index.html" class="link logo foot">Web<span class="foot-logo-part">Studio</span></a>
         <p class="footer-text text">Increase the flow of customers and sales for your business with digital marketing &
             growth solutions.</p>
